--- a/src/template/markup/parts/footer.pug
+++ b/src/template/markup/parts/footer.pug
@@ -1,1 +1,32 @@
 footer.footer
+	.case.row
+		.footer__item
+			+logo('footer__logo logo')
+			.footer__copy Кхл-билет.рф © 2020
+			.footer__desc Консьерж-сервис по оказанию услуг бронирования и доставке билетов
+		.footer__item
+			.footer__nav
+				ul
+					li
+						a(href="") Купить билеты
+					li
+						a(href="") Команды
+					li
+						a(href="") Стадионы
+					li 
+						a(href="") Новости
+			.footer__links
+				ul
+					li
+						a(href="") О компании
+					li
+						a(href="") Оферта
+					li
+						a(href="") Способы оплаты
+					li 
+						a(href="") Политика конфиденциальности
+		.footer__item 
+			.footer__phone.phone
+				a(href="") +7 (995) 950-50-50
+			.footer__dev
+				p Разработано в #[a(href="") Origy]
