--- a/src/template/styles/sass/_reset.sass
+++ b/src/template/styles/sass/_reset.sass
@@ -6,7 +6,7 @@
 body
     color: $colorMain
     font-size: $fzMain
-    flex-flow: $ffMain
+    font-family: $ffMain
     margin-left: auto
     margin-right: auto
     position: relative
