--- a/src/template/markup/_template.pug
+++ b/src/template/markup/_template.pug
@@ -1,4 +1,5 @@
 include _vars
+include _mixins
 doctype html
 block vars
 html(lang="ru")
@@ -8,11 +9,11 @@ html(lang="ru")
 		link(rel="shortcut icon" href="upload/favicon.png" type="image/png")
 		title=title
 	body
-		link(rel="stylesheet", href="template/styles/css/style.css?ver=" + version)
+		link(rel="stylesheet", href="template/styles/css/style.css" + version)
 		include parts/header
 		main.main
 			block content
 		include parts/footer
 
-		script(src="template/libs/jquery/dist/jquery.js?ver=" + version)
-		script(src="template/scripts/js/common.js?ver=" + version)
+		script(src="template/libs/jquery/dist/jquery.js" + version)
+		script(src="template/scripts/js/common.js" + version) 
