--- a/src/template/markup/pages/index.pug
+++ b/src/template/markup/pages/index.pug
@@ -1,5 +1,6 @@
 extends ../_template
 block vars
-    - var title = "Главная" + title
+	- var title = "Главная" + title
+	- var isMain = true
 block content
-    
+	
