--- a/src/template/markup/pages/news-item.pug
+++ b/src/template/markup/pages/news-item.pug
@@ -1,5 +1,19 @@
 extends ../_template
 block vars
-	- var title = "" + title
+	- var title = "ЦСКА обыграл в серии буллитов «Динамо»"
+	- 
+		var breadcrumbs = [
+			[
+				'Главная',
+				'index.html'
+			],
+			[
+				'Новости',
+				'news.html'
+			],
+			[
+				title
+			]
+		]
 block content
-	
+	include ../parts/news-item
