--- a/src/template/markup/pages/stadiums-item.pug
+++ b/src/template/markup/pages/stadiums-item.pug
@@ -1,5 +1,19 @@
 extends ../_template
 block vars
-	- var title = "" + title
+	- var title = "Стадион ЦСКА Арена"
+	- 
+		var breadcrumbs = [
+			[
+				'Главная',
+				'index.html'
+			],
+			[
+				'Стадионы',
+				'stadiums.html'
+			],
+			[
+				title
+			]
+		]
 block content
-	
+	include ../parts/stadiums-item
