--- a/src/template/markup/pages/teams-item.pug
+++ b/src/template/markup/pages/teams-item.pug
@@ -1,5 +1,19 @@
 extends ../_template
 block vars
-	- var title = "" + title
+	- var title = "Куньлунь РС"
+	- 
+		var breadcrumbs = [
+			[
+				'Главная',
+				'index.html'
+			],
+			[
+				'Команды',
+				'teams.html'
+			],
+			[
+				title
+			]
+		]
 block content
-	
+	include ../parts/teams-item
