Добавлены: команды. Сверстан слайдер

--- a/src/template/markup/_template.pug
+++ b/src/template/markup/_template.pug
@@ -1,5 +1,6 @@
 include _vars
 include _mixins
+include _data
 doctype html
 block vars
 html(lang="ru")
@@ -22,4 +23,5 @@ html(lang="ru")
 		include parts/footer
 
 		script(src="template/libs/jquery/dist/jquery.js" + version)
+		script(src="template/libs/slick-carousel/slick/slick.min.js" + version)
 		script(src="template/scripts/js/common.js" + version) 
