--- a/src/template/styles/sass/style.sass
+++ b/src/template/styles/sass/style.sass
@@ -3,6 +3,8 @@
 @import _reset
 @import _grid
 
+@import ../../libs/slick-carousel/slick/slick.css
+
 .bg-img
 	background-repeat: no-repeat
 	background-position: center
@@ -10,8 +12,14 @@
 
 
 // form-items
+@import components/btn
 @import components/select
 
+
+.h2
+	font-size: 50px
+	font-weight: 700
+	line-height: 140%
 
 .phone
 	a
@@ -116,7 +124,7 @@
 		
 		
 
-
+@import parts/slider
 .footer
 	background: #1E1E1E 
 	color: #EEF2FD
