Изменен: слайдер. Добавлен блок превью матчей

--- a/src/template/markup/data/dataTeams.pug
+++ b/src/template/markup/data/dataTeams.pug
@@ -13,7 +13,7 @@
         [
             'Сибирь',
             'Новосибирск',
-            'upload/teams/sibir.png'
+            'upload/teams/eagle.png'
         ],
         [
             'Куньлунь РС',
@@ -40,4 +40,9 @@
             'Москва',
             'upload/teams/tsska.png'
         ],
-    ]
+        [
+            'Барыс',
+            'Нур-Султан',
+            'upload/teams/barys.png'
+        ],
+    ] 
