--- a/src/template/markup/parts/slider.pug
+++ b/src/template/markup/parts/slider.pug
@@ -8,12 +8,12 @@
         .slider__item
             .slider__img(style="background-image: url('upload/bg/bg-intro.png')")
             .case
-                .slider__title.h2 Официальные билеты на матчи КХЛ
+                .slider__title.h2 Билеты на кубок #[br]первого канала
                 a.slider__btn.btn.--blue.--md(href="tickets.html") Купить билеты
         .slider__item
             .slider__img(style="background-image: url('upload/bg/bg-intro.png')")
             .case
-                .slider__title.h2 Официальные билеты на матчи КХЛ
+                .slider__title.h2 Билеты на чемпионат #[br]мира 2021
                 a.slider__btn.btn.--blue.--md(href="tickets.html") Купить билеты
     .slider__nav
         .slider__nav-item Билеты на КХЛ
