--- a/src/template/styles/sass/parts/preview.sass
+++ b/src/template/styles/sass/parts/preview.sass
@@ -1,2 +1,73 @@
 @import ../_vars
 
+.preview
+	padding-top: 80px
+	padding-bottom: 100px
+	&__title
+		margin-bottom: 70px
+	&__list
+		margin-left: -15px
+		margin-right: -15px
+		margin-bottom: -30px
+	&__item
+		display: block
+		width: calc(100% / 3 - 30px)
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+		border-radius: 30px
+		padding: 20px 15px 25px
+		color: #fff
+		background-color: $color-blue-dark
+	&__data
+		font-size: 20px
+		font-weight: 700
+		margin-bottom: 20px
+	&__date
+		max-width: 50%
+	&__time
+		max-width: 50%
+		margin-left: auto
+	&__teams
+		padding: 20px 0
+		border-top: 1px solid #3E5170
+		border-bottom: 1px solid #3E5170
+		justify-content: space-between
+		margin-left: 23px
+		margin-right: 23px
+	&__team
+		width: 150px
+	&__place
+		text-align: center
+		margin-top: 20px
+		strong
+			font-weight: 700
+			font-size: 20px
+		span
+			color: $color-gray
+
+	&__buy
+		max-width: 250px
+		margin-left: auto
+		margin-right: auto
+		margin-top: 35px
+	
+	&__more
+		max-width: 315px
+		margin-top: 50px
+
+.p-team
+	text-align: center
+	display: flex
+	flex-direction: column
+	align-items: center
+	&__logo
+		width: 100px
+	&__text
+		line-height: 21px
+	&__name
+		font-weight: 700
+	&__desc
+		color: $color-gray
+
+	
