--- a/src/template/styles/css/parts/slider.css
+++ b/src/template/styles/css/parts/slider.css
@@ -50,23 +50,36 @@
     .slider__nav .slick-current {
       color: #4871FF; }
   .slider__arrows {
+    z-index: 10;
     position: absolute;
-    bottom: 0;
+    bottom: 45px;
     right: 50%;
-    transform: translateX(-50%); }
+    margin-right: -555px;
+    transform: translateX(50%); }
 
 .arrows .slick-arrow {
+  z-index: 2;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   border: 1px solid #AEAEAE;
   background: transparent;
   font-size: 0;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: .3s; }
   .arrows .slick-arrow svg {
     width: 24px;
     height: 24px; }
-  .arrows .slick-arrow.slick-prev svg {
-    margin-left: -2px; }
+    .arrows .slick-arrow svg path {
+      transition: .3s; }
+  .arrows .slick-arrow.slick-prev {
+    margin-right: 10px; }
+    .arrows .slick-arrow.slick-prev svg {
+      margin-left: -2px; }
   .arrows .slick-arrow.slick-next svg {
     margin-left: 2px; }
+  .arrows .slick-arrow:hover {
+    border-color: #EF233A;
+    background-color: #EF233A; }
+    .arrows .slick-arrow:hover svg path {
+      fill: #fff; }
