--- a/src/template/styles/sass/style.sass
+++ b/src/template/styles/sass/style.sass
@@ -6,9 +6,9 @@
 @import ../../libs/slick-carousel/slick/slick.css
 
 .bg-img
-	background-repeat: no-repeat
-	background-position: center
-	background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
 
 
 // form-items
@@ -17,134 +17,143 @@
 
 
 .h2
-	font-size: 50px
-	font-weight: 700
-	line-height: 140%
+  font-size: 50px
+  font-weight: 700
+  line-height: 140%
 
 .phone
-	a
-		color: #EEF2FD
-		font-weight: 700 
+  a
+    color: #EEF2FD
+    font-weight: 700 
 .logo
-	width: 179px
-	display: flex
-	flex-wrap: wrap
-	&__icon
-		width: 42px
-		height: 45px
-	&__title
-		width: 130px
-		font-size: 13px
-		font-weight: 700
-		text-transform: uppercase
-		color: #EEF2FD
-		margin-left: 7px
-		display: flex
-		align-items: center
+  width: 179px
+  display: flex
+  flex-wrap: wrap
+  &__icon
+    width: 42px
+    height: 45px
+  &__title
+    width: 130px
+    font-size: 13px
+    font-weight: 700
+    text-transform: uppercase
+    color: #EEF2FD
+    margin-left: 7px
+    display: flex
+    align-items: center
 .header
-	background: #1E1E1E
-	color: #EEF2FD
-	padding-top: 20px
-	padding-bottom: 20px 
-	&__wrap
-		margin-left: auto
-		align-items: center
-	&__nav
-		li
-			padding-right: 30px 
-			&:last-of-type
-				padding-right: 0
-			&.--cart
-				var
-					display: inline-flex
-					align-items: center
-					justify-content: center
-					text-align: center
-					margin-left: 10px
-					width: 25px
-					height: 25px
-					background: #EF233A
-					border-radius: 50%
-					font-size: 13px
-					font-weight: 700
-		a
-			color: #EEF2FD
-	&__divider
-		border: 1px solid #AEAEAE
-		height: 40px
-		margin-right: 42px
-		margin-left: 42px
+  z-index: 100
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  background: #1E1E1E
+  color: #EEF2FD
+  padding-top: 20px
+  padding-bottom: 20px
+  &.--main
+    background: transparent
+  &__wrap
+    margin-left: auto
+    align-items: center
+  &__nav
+    li
+      padding-right: 30px 
+      &:last-of-type
+        padding-right: 0
+      &.--cart
+        var
+          display: inline-flex
+          align-items: center
+          justify-content: center
+          text-align: center
+          margin-left: 10px
+          width: 25px
+          height: 25px
+          background: #EF233A
+          border-radius: 50%
+          font-size: 13px
+          font-weight: 700
+    a
+      color: #EEF2FD
+  &__divider
+    border: 1px solid #AEAEAE
+    height: 40px
+    margin-right: 42px
+    margin-left: 42px
 
 
 
 // filter
 .filter
-	&__list
-		margin-left: -15px
-		margin-right: -15px
-		margin-bottom: -20px
-	&__item
-		margin-left: 15px
-		margin-right: 15px
-		margin-bottom: 20px
+  &__list
+    margin-left: -15px
+    margin-right: -15px
+    margin-bottom: -20px
+  &__item
+    margin-left: 15px
+    margin-right: 15px
+    margin-bottom: 20px
 
 
 
 // filter-item
 .fi
-	&__input
-		display: none
-	&__label
-		display: flex
-		align-items: center
-		justify-content: center
-		background: #EEEEEE
-		padding: 5px 44.5px
-		border-radius: 50px
-		min-height: 60px
-		cursor: pointer
-		transition: .3s
-		color: #333
-	&__icon
-		display: flex
-		width: 40px
-		height: 40px
-		align-items: center
-		justify-content: center
-	&__title
-		display: block
-		padding-left: 10px
-		
-	&.--checked
-		.fi
-			&__label
-				color: #fff
-				// font-weight: 700
-				background: #EF233A
-		
-		
+  &__input
+    display: none
+  &__label
+    display: flex
+    align-items: center
+    justify-content: center
+    background: #EEEEEE
+    padding: 5px 44.5px
+    border-radius: 50px
+    min-height: 60px
+    cursor: pointer
+    transition: .3s
+    color: #333
+  &__icon
+    display: flex
+    width: 40px
+    height: 40px
+    align-items: center
+    justify-content: center
+  &__title
+    display: block
+    padding-left: 10px
+    
+  &.--checked
+    .fi
+      &__label
+        color: #fff
+        // font-weight: 700
+        background: #EF233A
+    
+    
 
 @import parts/slider
+@import parts/preview
+
 .footer
-	background: #1E1E1E 
-	color: #EEF2FD
-	.case
-		justify-content: space-between
-	&__copy
-		text-transform: uppercase
-		color: #AEAEAE
-		font-size: 10px
-	&__desc
-		width: 186px
-		color: #AEAEAE
-		font-size: 10px
-		font-weight: 400
-		line-height: 140%
-	&__nav
-		li
-			padding-right: 30px 
-			&:last-of-type
-				padding-right: 0
-		a
-			color: #EEF2FD
-		
+  background: #1E1E1E 
+  color: #EEF2FD
+  .case
+    justify-content: space-between
+  &__copy
+    text-transform: uppercase
+    color: #AEAEAE
+    font-size: 10px
+  &__desc
+    width: 186px
+    color: #AEAEAE
+    font-size: 10px
+    font-weight: 400
+    line-height: 140%
+  &__nav
+    li
+      padding-right: 30px 
+      &:last-of-type
+        padding-right: 0
+    a
+      color: #EEF2FD
+    
