--- a/src/template/styles/sass/parts/advantages.sass
+++ b/src/template/styles/sass/parts/advantages.sass
@@ -1,2 +1,26 @@
 @import ../_vars
 
+.advantages
+	padding-top: 90px
+	padding-bottom: 90px
+	background-color: #142540
+	&__title
+		color: #EEF2FD
+		margin-bottom: 70px
+	&__item
+		width: 311px
+		margin-right: 100px
+		&:last-of-type
+			margin-right: 0
+		.adv
+			&__icon
+				margin-bottom: 10px
+			&__title
+				font-size: 20px
+				line-height: 140%
+				color: #EEF2FD
+				font-weight: 700
+				margin-bottom: 10px
+			&__desc
+				line-height: 155%
+				color: #AEAEAE
