--- a/src/template/styles/sass/style.sass
+++ b/src/template/styles/sass/style.sass
@@ -29,6 +29,13 @@
 @import parts/header
 @import parts/slider
 @import parts/preview
+@import parts/advantages
+@import parts/how-to
+@import parts/teams
+@import parts/stadiums
+@import parts/stadiums-page
+@import parts/news
+@import parts/news-page
 @import parts/page
 @import parts/breadcrumbs
 @import parts/filter
