--- a/src/template/markup/pages/_.pug
+++ b/src/template/markup/pages/_.pug
@@ -7,24 +7,24 @@ html(lang="en")
     body
         ul
             li
-                a(href="index.html") Главная
+                a(href="index.html" target="_blank") Главная
             li
-                a(href="tickets.html") Билеты
+                a(href="tickets.html" target="_blank") Билеты
             li
-                a(href="tickets-item.html") Билеты - итем
+                a(href="tickets-item.html" target="_blank") Билеты - итем
             li
-                a(href="teams.html") Команды
+                a(href="teams.html" target="_blank") Команды
             li
-                a(href="teams-item.html") Команда
+                a(href="teams-item.html" target="_blank") Команда
             li
-                a(href="stadiums.html") Стадионы
+                a(href="stadiums.html" target="_blank") Стадионы
             li
-                a(href="stadiums-item.html") Стадион
+                a(href="stadiums-item.html" target="_blank") Стадион
             li
-                a(href="news.html") Новости
+                a(href="news.html" target="_blank") Новости
             li
-                a(href="news-item.html") Новость
+                a(href="news-item.html" target="_blank") Новость
             li
-                a(href="cart.html") Корзина
+                a(href="cart.html" target="_blank") Корзина
             li
-                a(href="textpage.html") Текстовая
+                a(href="textpage.html" target="_blank") Текстовая
