--- a/src/template/styles/css/style.css
+++ b/src/template/styles/css/style.css
@@ -612,6 +612,245 @@ img {
   .p-team__desc {
     color: #AEAEAE; }
 
+.advantages {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #142540; }
+  .advantages__title {
+    color: #EEF2FD;
+    margin-bottom: 70px; }
+  .advantages__item {
+    width: 311px;
+    margin-right: 100px; }
+    .advantages__item:last-of-type {
+      margin-right: 0; }
+    .advantages__item .adv__icon {
+      margin-bottom: 10px; }
+    .advantages__item .adv__title {
+      font-size: 20px;
+      line-height: 140%;
+      color: #EEF2FD;
+      font-weight: 700;
+      margin-bottom: 10px; }
+    .advantages__item .adv__desc {
+      line-height: 155%;
+      color: #AEAEAE; }
+
+.how-to {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #FAFAFA; }
+  .how-to__title {
+    margin-bottom: 80px; }
+  .how-to__actions {
+    margin-right: 134px; }
+  .how-to__text {
+    width: 698px;
+    color: #808080;
+    line-height: 155%; }
+    .how-to__text p {
+      padding-bottom: 25px; }
+      .how-to__text p:last-of-type {
+        padding-bottom: 0; }
+
+.action__item {
+  width: 290px;
+  position: relative;
+  margin-bottom: 138px; }
+  .action__item::after {
+    content: "";
+    bottom: -90px;
+    left: 6px;
+    width: 1px;
+    height: 75px;
+    display: block;
+    position: absolute;
+    background: #F1F1F1; }
+  .action__item:last-of-type::after {
+    display: none; }
+
+.action__number {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 140%;
+  color: #F1F1F1;
+  position: absolute;
+  display: block;
+  top: -43px;
+  left: -3px;
+  z-index: 1; }
+
+.action__title {
+  color: #333;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 140%;
+  position: relative;
+  z-index: 2; }
+
+.teams {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -30px; }
+  .teams__item {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    width: calc( 100% / 3 - 30px);
+    display: flex;
+    background-color: #30425F;
+    border-radius: 30px;
+    padding: 25px; }
+    .teams__item:hover {
+      background-color: #1f2a3d; }
+  .teams__icon {
+    margin-right: 25px; }
+  .teams__text {
+    margin: auto 0; }
+  .teams__name {
+    font-size: 20px;
+    font-weight: 700;
+    color: #EEF2FD;
+    line-height: 140%; }
+  .teams__town {
+    color: #AEAEAE;
+    line-height: 140%; }
+
+.stadiums {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -30px; }
+  .stadiums__item {
+    position: relative;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    width: calc( 100% / 3 - 30px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 386px;
+    border-radius: 30px;
+    overflow: hidden;
+    padding: 20px; }
+    .stadiums__item:hover .stadiums__img {
+      transform: scale(1.05); }
+      .stadiums__item:hover .stadiums__img::before {
+        background: rgba(3, 1, 11, 0.1); }
+    .stadiums__item:hover .stadiums__title {
+      opacity: 0; }
+  .stadiums__img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    z-index: 1;
+    transition: .5s; }
+    .stadiums__img::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 3;
+      background: rgba(3, 1, 11, 0.5);
+      transition: .3s; }
+  .stadiums__title {
+    position: relative;
+    z-index: 3;
+    font-size: 20px;
+    color: #EEF2FD;
+    font-weight: 700;
+    transition: .3s; }
+
+.stadiums-page__text {
+  width: 594px;
+  margin-right: 130px; }
+  .stadiums-page__text p {
+    padding-bottom: 20px;
+    color: #808080;
+    line-height: 155%; }
+
+.stadiums-page__info {
+  margin-bottom: 70px; }
+
+.stadiums-page__contacts {
+  margin-bottom: 70px; }
+
+.stadiums-page__item {
+  margin-bottom: 30px;
+  display: flex; }
+  .stadiums-page__item:last-of-type {
+    margin-bottom: 0; }
+
+.stadiums-page__icon {
+  background: #EF233A;
+  border-radius: 50px;
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.stadiums-page__desc {
+  color: #000;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 155%; }
+
+.stadiums-page__img img {
+  margin-right: 30px; }
+  .stadiums-page__img img:last-of-type {
+    margin-right: 0; }
+
+.news {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -30px; }
+  .news__item {
+    background: #EEE;
+    border-radius: 30px;
+    width: calc( 100% / 2 - 30px);
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 30px;
+    overflow: hidden; }
+  .news__date {
+    color: #AEAEAE;
+    line-height: 155%;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 7px; }
+  .news__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 140%;
+    padding-bottom: 55px;
+    padding-left: 20px; }
+
+.news-page__img {
+  border-radius: 30px;
+  width: 594px; }
+
+.news-page__text {
+  color: #808080;
+  line-height: 155%;
+  width: calc( 100% - 594px);
+  padding-left: 30px; }
+  .news-page__text p {
+    margin-bottom: 30px; }
+    .news-page__text p:last-of-type {
+      margin-bottom: 0; }
+
+.news-page__date {
+  margin-bottom: 20px; }
+
 .page {
   padding-top: 110px;
   padding-bottom: 85px; }
