--- a/src/template/styles/sass/parts/news.sass
+++ b/src/template/styles/sass/parts/news.sass
@@ -1,2 +1,26 @@
 @import ../_vars
 
+.news
+	margin-left: -15px
+	margin-right: -15px
+	margin-bottom: -30px
+	&__item
+		background: #EEE
+		border-radius: 30px
+		width: calc( 100% / 2 - 30px )
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+		overflow: hidden
+	&__date
+		color: #AEAEAE
+		line-height: 155%
+		padding-top: 20px
+		padding-left: 20px
+		padding-bottom: 7px
+	&__title
+		font-weight: 700
+		font-size: 20px
+		line-height: 140%
+		padding-bottom: 55px
+		padding-left: 20px
