--- a/src/template/styles/sass/parts/teams.sass
+++ b/src/template/styles/sass/parts/teams.sass
@@ -1,2 +1,29 @@
 @import ../_vars
 
+.teams
+	margin-left: -15px
+	margin-right: -15px
+	margin-bottom: -30px
+	&__item
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+		width: calc( 100% / 3 - 30px )
+		display: flex
+		background-color: #30425F
+		border-radius: 30px
+		padding: 25px
+		&:hover
+      background-color: darken(#30425F, 10%)
+	&__icon
+		margin-right: 25px
+	&__text
+		margin: auto 0
+	&__name
+		font-size: 20px
+		font-weight: 700
+		color: #EEF2FD
+		line-height: 140%
+	&__town
+		color: #AEAEAE
+		line-height: 140%
